# asl

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitignore  DATABASE.md  Dockerfile  README.md  alembic.ini  docker-compose.local.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4e55865df366_normalized_learning_progress_schema.py  a1b2c3d4e5f6_drop_photo_url.py  b2c3d4e5f6a7_drop_hearts.py  c3d4e5f6a7b8_drop_user_progress_state.py  d4e5f6a7b8c9_add_subscriptions.py  e5f6a7b8c9d0_add_exercise_image_url.py  f6a7b8c9d0e1_add_user_role.py  g7h8i9j0k1l2_add_skipped_to_exercise_attempts.py
backend/app/: config.py  main.py
backend/app/application/services/: admin_curriculum_service.py  admin_metrics_service.py  auth_service.py  billing_service.py  challenge_service.py  curriculum_service.py  gamification_service.py  lesson_service.py  me_service.py  recognition_service.py
backend/app/domain/: challenges.py  curriculum_data.py  level_tiers.py  subscriptions.py
backend/app/domain/entities/: curriculum.py  recognition.py  subscription.py  user.py
backend/app/domain/ports/: curriculum_repository.py  metrics_repository.py  sign_recognizer.py  unit_of_work.py  user_repository.py
backend/app/infrastructure/auth/: jwt.py
backend/app/presentation/: deps.py
backend/scripts/: docker-entrypoint.sh  make_admin.py  seed_curriculum.py  seed_demo_users.py  wait_for_db.py
backend/tests/: conftest.py  sim_cloud.py  test_admin.py  test_api.py  test_asl_rec_adapter.py  test_gamification.py  test_stripe.py
(+102 files in other folders)
